--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -4,6 +4,7 @@ input:invalid {background-color: #ffdddd;}
 BODY{background-image: url(../img/fondo.jpg);}
 .p1{padding: 10px; border: 1px solid black; border-radius: 20px; background-color: black;}
 .nombres{padding: 10px; background-color: rgb(70, 69, 70); margin:center; margin-top: 10px; border: 1px solid black; border-radius: 10px; font-size: x-large; color: rgb(0, 203, 253);}
+.ind{padding: 10px; background-color: rgb(70, 69, 70); margin:center; margin-top: 10px; border: 1px solid black; border-radius: 10px; font-size: x-large; color: rgb(255, 255, 255);}
 .cen{ font-size: x-large; color: white;}
 p{font-size: x-large; font-style: "Lucida Console", "Courier New", monospace;}
 H1{font-size: xx-large; color: rgb(0, 203, 253);}
